<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingStart="@dimen/dimen_16dp"
	android:paddingEnd="@dimen/dimen_16dp"
	android:paddingTop="@dimen/dimen_22dp"
	android:paddingBottom="@dimen/dimen_22dp"
	android:background="@color/colorWhite"
	tools:showIn="@layout/content_product_details">

    <LinearLayout
	    android:id="@+id/llNewOfferFeatured"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    app:layout_constraintStart_toStartOf="parent"
	    app:layout_constraintTop_toTopOf="parent"
	    app:layout_constraintEnd_toEndOf="parent" >

	    <!-- NEW -->
	    <androidx.cardview.widget.CardView
		    android:id="@+id/cvTagNew"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginEnd="@dimen/dimen_16dp"
		    app:cardBackgroundColor="@color/colorProductDetailNewBackground"
		    app:cardCornerRadius="@dimen/dimen_2dp"
		    app:cardElevation="0dp">

		    <androidx.appcompat.widget.AppCompatTextView
			    style="@style/ProductDetailTag.Normal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="@dimen/dimen_12dp"
			    android:layout_marginTop="@dimen/dimen_2dp"
			    android:layout_marginEnd="@dimen/dimen_12dp"
			    android:layout_marginBottom="@dimen/dimen_2dp"
			    android:text="@string/product_details_tag_new_text" />
	    </androidx.cardview.widget.CardView>

	    <!-- OFFER -->
	    <androidx.cardview.widget.CardView
		    android:id="@+id/cvTagOffer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    app:cardBackgroundColor="@color/colorProductDetailOfferBackground"
		    app:cardCornerRadius="@dimen/dimen_2dp"
		    android:layout_marginEnd="@dimen/dimen_16dp"
		    app:cardElevation="0dp">

		    <androidx.appcompat.widget.AppCompatTextView
			    android:id="@+id/tvOffer"
			    style="@style/ProductDetailTag.Normal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="@dimen/dimen_12dp"
			    android:layout_marginTop="@dimen/dimen_2dp"
			    android:layout_marginEnd="@dimen/dimen_12dp"
			    android:layout_marginBottom="@dimen/dimen_2dp"
			    android:text="@string/product_details_tag_offer_text" />
	    </androidx.cardview.widget.CardView>

	    <!-- FEATURED -->
	    <androidx.cardview.widget.CardView
		    android:id="@+id/cvTagFeatured"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    app:cardBackgroundColor="@color/colorProductDetailFeaturedBackground"
		    app:cardCornerRadius="@dimen/dimen_2dp"
		    android:layout_marginEnd="@dimen/dimen_16dp"
		    app:cardElevation="0dp">

		    <androidx.appcompat.widget.AppCompatTextView
			    style="@style/ProductDetailTag.Normal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="@dimen/dimen_12dp"
			    android:layout_marginTop="@dimen/dimen_2dp"
			    android:layout_marginEnd="@dimen/dimen_12dp"
			    android:layout_marginBottom="@dimen/dimen_2dp"
			    android:text="@string/product_details_tag_featured_text" />
	    </androidx.cardview.widget.CardView>

    </LinearLayout>

	<!-- TITLE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvTitle"
		style="@style/ProductDetailTitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dimen_8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/llNewOfferFeatured"
		tools:text="Funda Silicone Cover Original Samsung Galaxy S9 O S9 Plus" />

	<!-- SUBTITLE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvSubtitle"
		style="@style/ProductDetailSubTitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dimen_8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvTitle"
		tools:text="Agárrate fuerte a tu Galaxy S9 + con esta funda de silicona. El material ofrece un agarre cómodo que no querrás soltar." />

	<!-- RATING BAR -->
	<androidx.appcompat.widget.AppCompatRatingBar
		android:id="@+id/ratingBar"
		style="?android:attr/ratingBarStyleSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:numStars="5"
		android:stepSize="0.1"
		android:progressTint="@color/colorRatingBarProgressTint"
		android:secondaryProgressTint="@color/colorRatingBarSecondaryProgressTint"
		app:layout_constraintBottom_toBottomOf="@id/tvRatingScore"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/tvRatingScore"
		tools:rating="3.7" />

	<!-- RATING SCORE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvRatingScore"
		style="@style/ProductDetailRatingScore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimen_8dp"
		android:layout_marginTop="@dimen/dimen_12dp"
		app:layout_constraintStart_toEndOf="@id/ratingBar"
		app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
		tools:text="4.5" />

	<!-- RATINGS QUANTITY -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvRatingQuantity"
		style="@style/ProductDetailSold"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimen_8dp"
		app:layout_constraintStart_toEndOf="@id/tvRatingScore"
		app:layout_constraintTop_toTopOf="@id/tvRatingScore"
		app:layout_constraintBottom_toBottomOf="@id/tvRatingScore"
		tools:text="(3 votes)"/>

	<!-- RATING SCORE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvViewAllComments"
		style="@style/ProductDetailViewAllComents"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dimen_4dp"
		android:layout_marginBottom="@dimen/dimen_16dp"
		android:drawablePadding="0dp"
		android:drawableEnd="@drawable/ic_arrow_right_black_18dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvRatingScore"
		android:text="@string/product_details_button_view_all_comment_text" />

	<!-- ORIGINAL PRICE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvOriginalPrice"
		style="@style/ProductDetailOriginalPrice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dimen_24dp"
		app:layout_constraintStart_toStartOf="@id/tvTitle"
		app:layout_constraintTop_toBottomOf="@id/tvViewAllComments"
		tools:text="from $800" />

	<!-- PRICE -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvPrice"
		style="@style/ProductDetailPrice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="@id/tvTitle"
		app:layout_constraintTop_toBottomOf="@id/tvOriginalPrice"
		app:layout_goneMarginTop="@dimen/dimen_22dp"
		tools:text="$700" />

	<!-- SAVE -->
	<androidx.cardview.widget.CardView
		android:id="@+id/cvTagSave"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimen_16dp"
		app:cardBackgroundColor="@color/colorDiscount"
		app:cardCornerRadius="@dimen/dimen_2dp"
		app:cardElevation="0dp"
		app:layout_constraintBottom_toBottomOf="@id/tvPrice"
		app:layout_constraintStart_toEndOf="@id/tvPrice"
		app:layout_constraintTop_toTopOf="@id/tvPrice">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tTagvSave"
			style="@style/ProductDetailTag.Light"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/dimen_12dp"
			android:layout_marginTop="@dimen/dimen_2dp"
			android:layout_marginEnd="@dimen/dimen_12dp"
			android:layout_marginBottom="@dimen/dimen_2dp"
			tools:text="Save 5%" />
	</androidx.cardview.widget.CardView>

   <!--	SHARE ICON -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvShareBtn"
		style="@style/ProductDetailIconTextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dimen_16dp"
		android:drawableStart="@drawable/ic_share_black_24dp"
		android:text="@string/product_details_share_label"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvPrice" />

	<!-- FAVORITE ICON -->
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvFavoriteBtn"
		style="@style/ProductDetailIconTextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/dimen_12dp"
		android:drawableStart="@drawable/ic_favorite_border_black_24dp"
		android:text="@string/product_details_add_as_favorite"
		app:layout_constraintBottom_toBottomOf="@id/tvShareBtn"
		app:layout_constraintEnd_toStartOf="@id/tvShareBtn"
		app:layout_constraintTop_toTopOf="@id/tvShareBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>

		